MODIS 1.2.0

Changes:

  * getHdf(), runGdal() with no extent info (ie. 'x = tileH = tileV = NULL') triggers interactive tile selection. 
  * LP DAAC is default download server (previously LAADS).


MODIS 1.1.7

Changes:

  * Re-enabled LAADS data retrieval.


MODIS 1.1.6

New features:

  * New set of MODIS products, including MCD43GF, MOD/MYD16A2GF, MOD/MYD16A3GF, MOD/MYD17A2HGF, MOD/MYD17A3, and MOD/MYD17A3HGF.
  * On Windows, if gdalinfo.exe couldn't be found in specified 'gdalPath', scan other environment variables and, in case of success, provide further instructions.

Changes:

  * Ensured compatibility with GDAL3/PROJ6.
  * For non-NSIDC products, getCollection(..., forceCheck = TRUE) no longer requires Earthdata credentials.
  * Fixed broken weblinks.


MODIS 1.1.5

Changes:

  * Moved internal datasets (products, collections, etc.) from manual creation in zz_lazyload.R, which also had an unnecessary installed.packages() call in it, to R/sysdata.rda.

Bugfixes:

  * Missing compatibility of repDoy() with results from extractDate().
  * Duplicate server issue when passing multiple products on to runGdal().


MODIS 1.1.4

New features: 

  * After temporary inoperability, runMRT() is fully functional again.
  * Interactive feature drawing is now implemented in getTile(), check out the documentation.
  * getTile() supports 'sp' or 'sf' point geometries with length = 1 (i.e. a single point), in which case the target extent is the MODIS tile covering the specified location.
  * Multiple source download using aria2 whenever more than one server is available (e.g. LAADS and LP DAAC)
  * New classes 'MODISproduct' and 'MODISfile' created by getProduct().

Changes:

  * When running getHdf() (or runGdal()) with LP DAAC or NSIDC as target download server and Earthdata login credentials in ~/.netrc are missing, the user is forced to insert the required information on the command line. This is intended to avoid repeat authentication failures.