@@ -2,7 +2,7 @@ Package: MODIS
 Type: Package
 Title: Acquisition and Processing of MODIS Products
 Version: 1.2.0
-Date: 2020-05-27
+Date: 2020-06-03
 URL: https://github.com/MatMatt/MODIS
 BugReports: https://github.com/MatMatt/MODIS/issues
 Authors@R: c(
