@@ -4,6 +4,7 @@ Changes:
 
   * getHdf(), runGdal() with no extent info (ie. 'x = tileH = tileV = NULL') triggers interactive tile selection. 
   * LP DAAC is default download server (previously LAADS).
+  * MRT method for getSds() is no longer available.
 
 
 MODIS 1.1.7
